2010-02-21	Sergey S. Sergeev

	* main/Base/Hstore.class.php: set(), drop() added.

2010-02-20	Sergey S. Sergeev

	* core/Logic/Expression.class.php, core/Logic/BinaryExpression.class.php:
	modulus logic implemented.

	* core/Logic/HstoreExpression.class.php: containHstore(),
	containValueList() added.

	* core/DB/Dialect.class.php, core/DB/ImaginaryDialect.class.php,
	core/DB/LiteDialect.class.php, core/DB/MyDialect.class.php,
	core/DB/PostgresDialect.class.php, core/OSQL/DeleteQuery.class.php,
	core/OSQL/InsertOrUpdateQuery.class.php, core/OSQL/InsertQuery.class.php,
	core/OSQL/QuerySkeleton.class.php, core/OSQL/SelectQuery.class.php:
	refactoring code. OSQL INSERT/UPDATE/DELETE RETURNING, INSERT from SELECT
	clause implemented.

	* test/main/OsqlDeleteTest.class.php, test/main/OsqlInsertTest.class.php,
	test/main/OsqlReturningTest.class.php, test/main/OsqlSelectTest.class.php:
	useful test cases added.

2010-02-19	Sergey S. Sergeev

	* main/Base/CallChain.class.php: call() method fixed.

	* test/core/FiltersTest.class.php, test/main/Net/MailTest.class.php:
	test assertions added. 

	* main/Net/Mail/MailAddress.class.php: toString() method fixed.

2010-02-02	Evgeny V. Kokovikhin

	* main/Net/Http/Cookie.class.php: zero expire for cookie

2009-12-30	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: applyFunctorToCartesianProduct(): to apply
	function on each tuple of a cartesianProduct.

2009-12-29	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: getMmult(): added.

2009-12-22	Vladlen Y. Koshelev

	* main/Criteria/PropertyPath.class.php: correct handling of non-DAOConnected
	properties in path (e.g. ValueObject properties).

2009-12-21	Denis M. Gabaidulin

	* core/Base/PriorityQueue.class.php: simple priority queue impl. based
	on binary heap.

2009-12-19	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: getStandardDeviation(): calculate
	standard deviation.
	
	* main/Math/MathUtils.class.php: getAbsoluteDeviation(): calculate
	absolute deviation.
	