@@ -2,6 +2,8 @@
 
 	* main/Base/Hstore.class.php: set(), drop() added.
 
+	* main/Net/Mail/Mail.class.php: setReturnPath(), getReturnPath() added.
+
 2010-02-20	Sergey S. Sergeev
 
 	* core/Logic/Expression.class.php, core/Logic/BinaryExpression.class.php:
